clean up + text edits

--- a/notebooks/exploratory/nfl-data.ipynb
+++ b/notebooks/exploratory/nfl-data.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "546bbe4f",
-   "metadata": {},
+   "metadata": {
+    "_sphinx_cell_id": "ad1794e0-b1b0-4130-85f6-854268caa05f"
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -49,6 +51,7 @@
     }
    ],
    "source": [
+    "# more testing of data flow\n",
     "import os\n",
     "from google.cloud import bigquery\n",
     "from google.oauth2 import service_account\n",
@@ -89,7 +92,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "9afdf041",
-   "metadata": {},
+   "metadata": {
+    "_sphinx_cell_id": "35d4d3f3-dfa7-4f16-a276-439b4bb3e37b"
+   },
    "outputs": [
     {
      "data": {
@@ -141,7 +146,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "bdc11afd",
-   "metadata": {},
+   "metadata": {
+    "_sphinx_cell_id": "beb4addf-c34b-43df-84af-54cc25d4342b"
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -183,7 +190,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "858b0d06",
-   "metadata": {},
+   "metadata": {
+    "_sphinx_cell_id": "203b3b3a-b296-48b4-af7c-f9fe86ac07d5"
+   },
    "outputs": [
     {
      "data": {
